# mandarin_tree_detector

./: .gitignore  CLAUDE.md  Makefile  OPERATOR_GUIDE.md  README.md  README.zh-CN.md  SPEC.md  config.example.yaml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
grove/: __init__.py  cli.py
grove/core/: __init__.py  config.py  formats.py  models.py
grove/pipeline/: __init__.py  annotate.py  detect.py  export.py  ingest.py  tiling.py  train.py
grove/pipeline/detectors/: __init__.py  base.py  grounding_dino.py  grounding_dino_hf.py  yolo_world.py
grove/review/: __init__.py  server.py  store.py
grove/review/static/: app.js  index.html  styles.css
notebooks/: kaggle_label.ipynb
tests/: __init__.py  conftest.py  test_detector_backends.py  test_detectors.py  test_export.py  test_formats.py  test_grounding_dino_hf.py  test_ingest.py  test_pipeline_gpu_glue.py  test_tiling.py
