[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grove"
version = "0.1.0"
description = "Grove: an open-vocabulary auto-labeling pipeline for mandarin-tree object-detection datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Grove" }]

# ---------------------------------------------------------------------------
# Base dependencies: the shared core + CLI + ingest + review boundaries.
# Deliberately GPU-free and light so the package imports cleanly on a Mac.
# Heavy GPU/torch deps live in the [gpu] extra (Kaggle side) ONLY.
# ---------------------------------------------------------------------------
dependencies = [
    "pydantic>=2.5,<3",
    "PyYAML>=6.0",
    "typer>=0.9",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Local review UI (Mac, no GPU). MUST stay torch-free.
review = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
# GPU side (Kaggle/Colab). Pulls in torch via autodistill — never install on the Mac.
gpu = [
    "autodistill>=0.1.24",
    "autodistill-grounding-dino>=0.1.4",
    "autodistill-yolo-world>=0.1.2",
    # Pin supervision to the modern-annotator era: the BoxAnnotator/LabelAnnotator
    # API and the Detections iteration tuple changed across releases (the cause of
    # a real annotate bug), so bound it to a range the detector + annotate code
    # were written and reviewed against.
    "supervision>=0.22,<0.27",
    "ultralytics>=8.1",
    "opencv-python>=4.8",
    "sahi>=0.11",
]
# Local CPU detection via HuggingFace Grounding DINO — the fallback used by the
# `grounding_dino` backend (and selectable directly as `grounding_dino_hf`) when
# autodistill is absent. Same IDEA-Research model as the [gpu] path but pure-Python
# (no native CUDA build), so it runs on the Intel Mac dev box. transformers is
# pinned <5 because v5 requires torch>=2.4, while the Mac baseline is torch 2.2.
detect-hf = [
    "transformers>=4.40,<5",
    "huggingface_hub>=0.23,<1",
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "safetensors>=0.4",
    "opencv-python>=4.8",
    "supervision>=0.22,<0.27",
]
# Test / dev tooling (no GPU needed; detector is stubbed in tests).
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
grove = "grove.cli:main"

[tool.setuptools.packages.find]
include = ["grove*"]

[tool.setuptools.package-data]
"grove.review" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
